--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 private_key_file = /home/suporte/.ssh/id_rsa 
 interpreter_python = auto
-roles_path = /etc/ansible/roles
+roles_path = /etc/ansible/para_git/roles
 timeout = 30
 command_timeout = 200
 connect_timeout = 200
